--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<!-- <div class="center-content">
-  <img src="assets/logo/port_cafe.png" class="port-cafe-img" alt="">
-</div> -->
-<!-- <img src="assets/logo/project_akari.png" class="project-akari-img" alt="">
-<video class="login-video" [muted]="true" autoplay playsinline loop>
-  <source src="assets/videos/login_video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video> -->
+<router-outlet></router-outlet>
