--- a/src/app/loading-screen/loading-screen.component.css
+++ b/src/app/loading-screen/loading-screen.component.css
@@ -1,6 +1,13 @@
-.port-cafe-img {
+:host {
+  height: 100vh;
+}
+.port-cafe-logo {
   height: 35%;
   width: 25%;
+}
+.project-akari-logo {
+  height: 20%;
+  width: 35%;
 }
 .project-akari-img {
   position: fixed;
@@ -12,6 +19,19 @@
 }
 .login-video {
   width: 100%;
-  height: 99%;
+  height: 99.5%;
   object-fit: fill
+}
+
+.fade-in { animation: fadeIn 2s; }
+.fade-out { animation: fadeOut 2s; }
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
 }
