added background, listener and dialog

--- a/src/app/greetings/greetings.component.html
+++ b/src/app/greetings/greetings.component.html
@@ -1,1 +1,3 @@
+<img class="background" src="assets/img/Background/classroom.jpg" alt="">
 <div id="l2d-canvas"></div>
+<app-dialog-box *ngIf="showDialogBox"></app-dialog-box>
