--- a/src/app/greetings/dialog-box/dialog-box.component.css
+++ b/src/app/greetings/dialog-box/dialog-box.component.css
@@ -5,7 +5,6 @@
   height: 200px;
   width: 80%;
   z-index: 3;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .dialog-container {
@@ -57,6 +56,7 @@
 }
 
 .dialog-body {
+  cursor: pointer;
   position: absolute;
   top: 0;
   left: 0;
@@ -68,6 +68,7 @@
 }
 
 .dialog-body-content {
+  cursor: pointer;
   position: relative;
   font-size: 30px;
   font-weight: normal;
