--- a/src/app/greetings/greetings.component.html
+++ b/src/app/greetings/greetings.component.html
@@ -1,3 +1,8 @@
 <img class="background" src="assets/img/Background/classroom.jpg" alt="">
 <div id="l2d-canvas"></div>
-<app-dialog-box *ngIf="showDialogBox"></app-dialog-box>
+<app-dialog-box
+  *ngIf="showDialogBox">
+</app-dialog-box>
+<app-loading-screen
+  *ngIf="!isModelLoaded">
+</app-loading-screen>
