--- a/src/app/loading-screen/loading-screen.component.css
+++ b/src/app/loading-screen/loading-screen.component.css
@@ -1,37 +1,21 @@
-:host {
+.loading-screen-bg {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: white;
+  width: 100vw;
   height: 100vh;
 }
-.port-cafe-logo {
-  height: 35%;
-  width: 25%;
-}
-.project-akari-logo {
-  height: 20%;
-  width: 35%;
-}
-.project-akari-img {
-  position: fixed;
-  bottom: 15%;
-  left: 30%;
-  z-index: 2;
-  height: 20%;
-  width: 35%;
-}
-.login-video {
-  width: 100%;
-  height: 99.5%;
-  object-fit: fill
-}
 
-.fade-in { animation: fadeIn 2s; }
-.fade-out { animation: fadeOut 2s; }
-
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@keyframes fadeOut {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
+.loading-screen-loading {
+  position: absolute;
+  bottom: 20px;
+  right: 15px;
+  background-color: rgb(54, 53, 53);
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 10px;
 }
