--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .center-content {
   display: flex;
