Added motion on Haruka, An and Akito

--- a/src/app/greetings/greetings.component.html
+++ b/src/app/greetings/greetings.component.html
@@ -1,6 +1,7 @@
 <app-dialog-box
   *ngIf="showDialogBox"
-  [greeting]="greeting">
+  [greeting]="greeting"
+  [modelLoaded]="modelLoadedCount">
 </app-dialog-box>
 <app-loading-screen
 *ngIf="!isModelLoaded">
