--- a/src/app/greetings/dialog-box/dialog-box.component.html
+++ b/src/app/greetings/dialog-box/dialog-box.component.html
@@ -11,3 +11,9 @@
     </div>
   </div>
 </div>
+<app-modal>
+  <div class="app-modal-contents">
+    <!-- <img src="assets/img/greetings/juicy/art.png" alt=""> -->
+    <img src="assets/img/greetings/juicy/greeting.png" alt="">
+  </div>
+</app-modal>
