--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,16 @@ body {
 .max-height {
   height: 99.5%;
 }
+
+.app-modal-contents {
+  position: absolute;
+  width: 100%;
+  height: 91%;
+}
+
+.app-modal-contents img {
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
