--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,11 @@ body {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+.app-modal-contents iframe {
+  border: unset;
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
