--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
 body {
   height: 100vh;
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: unset;
 }
 .center-content {
   display: flex;
