completed redirecting to dialog from characters

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -22,6 +22,9 @@
   height: 99.5%;
   object-fit: fill
 }
+#loginPage {
+  cursor: pointer;
+}
 
 .fade-in { animation: fadeIn 2s; }
 .fade-out { animation: fadeOut 2s; }
