Completed dialogs and adding skipping intro func

--- a/src/app/greetings/greetings.component.html
+++ b/src/app/greetings/greetings.component.html
@@ -3,7 +3,8 @@
 <app-dialog-box
   *ngIf="showDialogBox"
   [greeting]="greeting"
-  [modelLoaded]="modelLoadedCount">
+  [modelLoaded]="modelLoadedCount"
+  (onExit)="onExit()">
 </app-dialog-box>
 <app-loading-screen
 *ngIf="!isModelLoaded">
