--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -22,6 +22,33 @@
   height: 99.5%;
   object-fit: fill
 }
+.option-btn {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  height: 50px;
+  width: 60px;
+  z-index: 3;
+  cursor: pointer;
+  padding: 2px 8px;
+  padding-top: 8px;
+  border-radius: 10px;
+  color: black;
+  border: 1px solid #676688;
+  border-bottom: 2px solid #676688;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.option-btn-line {
+  display: block;
+  background-color: #00F7D6;
+  width: 100%;
+  height: 4px;
+  margin-bottom: 6px;
+}
 #loginPage {
   cursor: pointer;
 }
