--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -11,8 +11,8 @@
 }
 .project-akari-img {
   position: fixed;
-  bottom: 15%;
-  left: 30%;
+  bottom: 18%;
+  left: 31%;
   z-index: 2;
   height: 20%;
   width: 35%;
@@ -49,12 +49,32 @@
   height: 4px;
   margin-bottom: 6px;
 }
+.tap-to-login-container {
+  position: fixed;
+  bottom: 12%;
+  left: 35%;
+  height: 40px;
+  width: 30%;
+  background: linear-gradient(to right, rgba(0, 255, 221, 0), rgba(0, 255, 221, 1), rgba(0, 255, 221, 0));
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  color: #ffffff;
+  padding-top: 6px;;
+  animation: tapToStart 1.8s infinite ease-in;
+}
 #loginPage {
   cursor: pointer;
 }
 
 .fade-in { animation: fadeIn 2s; }
 .fade-out { animation: fadeOut 2s; }
+
+@keyframes tapToStart {
+  0% {opacity: 0;}
+  50% {opacity: 1;}
+  100% {opacity: 0;}
+}
 
 @keyframes fadeIn {
   0% { opacity: 0; }
