--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,6 +10,7 @@
   <div class="option-btn-line"></div>
 </div>
 <div id="loginPage" *ngIf="loginPage" (click)="onLogin()" class="max-height fade-in">
+  <div class="tap-to-login-container">CLICK TO START</div>
   <img src="assets/logo/project_akari.png" class="project-akari-img" alt="">
   <audio [autoplay]="true" loop>
     <source src="assets/sound/bgm/LoginBGM.mp3" type="audio/mpeg" />
@@ -26,7 +27,7 @@
   (onClose)="onModalClose()">
   <div class="center-content">
     <div class="form-check form-switch" style="color: black; margin-top: 20px;">
-      <input [(ngModel)]="isIntroSkipped" (click)="toggleSkipIntro()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" >
+      <input [(ngModel)]="isIntroSkipped" (click)="toggleSkipIntro()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
       <label class="form-check-label" for="flexSwitchCheckChecked">Skip Introduction</label>
     </div>
   </div>
