--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,15 @@ body {
   background-color: #00ccbb;
   border-color: #00ccbb;
 }
+
+@keyframes arrowMoveLeft {
+  0% { transform: translateX(0); }
+  50% { transform: translateX(-5px); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes arrowMoveRight {
+  0% { transform: translateX(0) rotate(180deg); }
+  50% { transform: translateX(5px) rotate(180deg); }
+  100% { transform: translateX(0) rotate(180deg); }
+}
