added leoneed and more more jump group img

--- a/src/app/assets-loader/assets-loader.component.html
+++ b/src/app/assets-loader/assets-loader.component.html
@@ -1,20 +1,22 @@
 
-<div class="group-logo">
-  <img src="assets/img/group-logo/LeoNeed.png" alt="">
-</div>
-<div class="btn-container left">
-  <img src="assets/img/component/Arrow.png" alt="">
-</div>
-<div class="btn-container right">
-  <img src="assets/img/component/Arrow.png" alt="">
-</div>
-<div class="loading-bar-container">
-  <h3>Now Loading...</h3>
-  <div class="loading-bar"></div>
-  <p>*Please check your signal strength before download. Weak signal strength may result in longer download times.</p>
-</div>
-<div class="bottom-box"></div>
-<div class="bottom-box back">
-
+<div class="group-members">
+  <div class="group-logo">
+    <img src="assets/img/group-logo/LeoNeed.png" alt="">
+  </div>
+  <div class="btn-container left">
+    <img src="assets/img/component/Arrow.png" alt="">
+  </div>
+  <div class="btn-container right">
+    <img src="assets/img/component/Arrow.png" alt="">
+  </div>
+  <div class="loading-bar-container">
+    <h3>Now Loading...</h3>
+    <div class="loading-bar"></div>
+    <p>*Please check your signal strength before download. Weak signal strength may result in longer download times.</p>
+  </div>
+  <div class="bottom-box"></div>
+  <div class="bottom-box back">
+    <p class="group-messange">Four childhood friends overcome their defferences to form a band</p>
+  </div>
 </div>
 <app-loading-screen *ngIf="showLoadingScreen"></app-loading-screen>
