--- a/src/app/assets-loader/assets-loader.component.html
+++ b/src/app/assets-loader/assets-loader.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="bottom-box"></div>
   <div class="bottom-box back">
-    <p class="group-messange">Four childhood friends overcome their defferences to form a band</p>
+    <p class="group-message">Four childhood friends overcome their defferences to form a band</p>
   </div>
 </div>
 <app-loading-screen *ngIf="showLoadingScreen"></app-loading-screen>
