--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -21,14 +21,15 @@
     Your browser does not support the video tag.
   </video>
 </div>
+<app-assets-loader *ngIf="isAssetsLoaderShown" [loadLandingPage]="true" (onCompleted)="onAssetsLoaded()"></app-assets-loader>
 <app-modal
-  [hidden]="!isModalShown"
-  [menuTitle]="'Settings'"
-  (onClose)="onModalClose()">
-  <div class="center-content">
-    <div class="form-check form-switch" style="color: black; margin-top: 20px;">
-      <input [(ngModel)]="isIntroSkipped" (click)="toggleSkipIntro()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
-      <label class="form-check-label" for="flexSwitchCheckChecked">Skip Introduction</label>
-    </div>
+[hidden]="!isModalShown"
+[menuTitle]="'Settings'"
+(onClose)="onModalClose()">
+<div class="center-content">
+  <div class="form-check form-switch" style="color: black; margin-top: 20px;">
+    <input [(ngModel)]="isIntroSkipped" (click)="toggleSkipIntro()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+    <label class="form-check-label" for="flexSwitchCheckChecked">Skip Introduction</label>
   </div>
+</div>
 </app-modal>
